@@ -1,3 +1,8 @@
+2011-06-08  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (recentf-track-closed-file): Adviced. Move to
+	beginning of the recent list after killed.
+
 2011-06-07  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el (svn-status): Add psvn.
